<resources>
    <string name="app_name">Horari DAM</string>
    <array name="array_dias">
        <item>Selecciona un día de la semana *</item>
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sabado</item>
        <item>Domingo</item>
    </array>
    <array name="array_grupos">
        <item>A1</item>
        <item>A2</item>
    </array>
    <string name="txt_hora_inici">Inicio:</string>
    <string name="txt_hora_final">| Final:</string>
    <string name="txt_professor">Profesor/a:</string>
    <string name="txt_aula">Aula:</string>
    <string name="cargando">Cargando...</string>
    <string name="selecciona_opcion">* Debes seleccionar un día de la semana.</string>
    <string name="no_resultados">No hay ningún horario registrado con el día seleccionado.</string>
    <string name="menu_op1">Configuración</string>
    <string name="configuracion_usuario">Configuración usuario</string>
    <string name="descripcion_nombre">Introduce tu nombre.</string>
    <string name="nombre_prefs">Nombre</string>
    <string name="indicar_grupo">Indicar grupo</string>
    <string name="grupo_prefs">Grupo</string>
    <string name="descripcion_grupo">Indica el grupo al que perteneces.</string>
    <string name="valor_usuario" translatable="false">nombre_usuario</string>
    <string name="valor_grupo" translatable="false">grupo_usuario</string>
    <string name="preferencias_activity">Configuración</string>
    <string name="appwidget_text">Horario DAM</string>
    <string name="add_widget">Añadir widget</string>
    <string name="widget_no_resultados">No tienes ningún horario ahora mismo.</string>
    <string name="widget_desinstalado">¡Widget eliminado correctamente!</string>
    <string name="acerca_de">Acerca de</string>
    <string name="descripcion_acerca_de">Diseño y código por Joan Creus Martin</string>
    <string name="acerca_de_info">Información</string>
</resources>
